--- a/website/templates/index.pug
+++ b/website/templates/index.pug
@@ -15,6 +15,7 @@ html(lang="fr")
 					a.p-2.text-muted(href="#contribute") Participer
 					a.p-2.text-muted(href="#statistics") Statistiques
 					a.p-2.text-muted(href="#about") À propos
+					a#connect-osm.p-2.text-muted Se connecter
 
 			//- Project summary
 			div#summary.jumbotron.p-4.p-md-5.text-white.rounded.bg-dark
