--- a/website/templates/common_head.pug
+++ b/website/templates/common_head.pug
@@ -3,13 +3,14 @@ meta(charset="UTF-8")
 title Projet du mois.fr
 meta(name="description" content="Projet du mois.fr est le tableau de bord de la communauté OpenStreetMap en France pour ses actions mensuelles d'amélioration des données")
 meta(name="twitter:site" content="@projetdumois")
-//- meta(name="twitter:card" content="summary_large_image")
+meta(name="twitter:card" content="summary_large_image")
 meta(property="og:type" content="website")
 meta(property="og:url" content="https://projetdumois.fr")
 meta(property="og:title" content="Projet du mois.fr")
 meta(property="og:description" content="Projet du mois.fr est le tableau de bord de la communauté OpenStreetMap en France pour ses actions mensuelles d'amélioration des données")
-//- meta(property="og:image" content="https://...")
+meta(property="og:image" content="https://projetdumois.fr/images/header.png")
 meta(rel="canonical" href="https://projetdumois.fr")
+link(rel="icon" href="/images/favicon.png")
 
 //- CSS
 link(rel="stylesheet" type="text/css" href="/lib/bootstrap/bootstrap.css")
