Map moved out of project page

--- a/website/templates/common_head.pug
+++ b/website/templates/common_head.pug
@@ -1,5 +1,6 @@
 //- Meta
 meta(charset="UTF-8")
+meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
 title Projet du mois.fr
 meta(name="description" content="Projet du mois.fr est le tableau de bord de la communauté OpenStreetMap en France pour ses actions mensuelles d'amélioration des données")
 meta(name="twitter:site" content="@projetdumois")
