--- a/website/templates/map.pug
+++ b/website/templates/map.pug
@@ -96,6 +96,7 @@ script.
 
 	function getDescription(feature, popup) {
 		const osmoseLabels = !{JSON.stringify(osmoseLabels)};
+		const osmoseButtons = !{JSON.stringify(osmoseButtons)};
 		const p = feature.properties;
 		const resDiv = document.createElement("div");
 		resDiv.innerHTML = `<span class="spinner-border text-primary" role="status"></span>`;
@@ -105,6 +106,7 @@ script.
 		.then(res => res.json())
 		.then(meta => {
 			const labels = osmoseLabels[`${meta.item}_${meta.class}`] || osmoseLabels[`${meta.item}_all`] || { name: meta.title.auto };
+			const buttons = osmoseButtons[`${meta.item}_${meta.class}`] || osmoseButtons[`${meta.item}_all`] || { "done": "Résolu", "false": "Faux positif" };
 
 			const links = getLinks(meta).map(l => {
 				const linkDom = document.createElement("a");
@@ -166,14 +168,14 @@ script.
 			divButtons.role = "group";
 			const divButtonDone = document.createElement("button");
 			divButtonDone.classList.add("btn", "btn-success");
-			divButtonDone.appendChild(document.createTextNode("✔ Résolu"));
-			divButtonDone.title = "Marquer cet élément comme résolu si vous avez corrigé le point dans OpenStreetMap";
+			divButtonDone.appendChild(document.createTextNode("✔ "+buttons.done));
+			divButtonDone.title = "Marquer cet élément comme \""+buttons.done+"\" si vous avez ajouté/corrigé le point dans OpenStreetMap";
 			divButtonDone.addEventListener("click", markOsmose("done", feature, popup));
 			divButtons.appendChild(divButtonDone);
 			const divButtonFalse = document.createElement("button");
 			divButtonFalse.classList.add("btn", "btn-warning");
-			divButtonFalse.appendChild(document.createTextNode("✘ Faux positif"));
-			divButtonFalse.title = "Marquer cet élément comme faux positif si le signalement n'est pas valide";
+			divButtonFalse.appendChild(document.createTextNode("✘ "+buttons.false));
+			divButtonFalse.title = "Marquer cet élément comme \""+buttons.false+"\" si le signalement n'est pas valide";
 			divButtonFalse.addEventListener("click", markOsmose("false", feature, popup));
 			divButtons.appendChild(divButtonFalse);
 			resDiv.appendChild(divButtons);
