--- a/website/templates/geocoder.pug
+++ b/website/templates/geocoder.pug
@@ -1,5 +1,5 @@
 div.input-group#boundary-search-container
-	div.input-group-prepend
+	div.d-none.d-sm-flex.input-group-prepend
 		span.input-group-text#search-bar-icon
 			i.fa.fa-search
 	input#boundary-search.form-control(type="text" placeholder="Rechercher un lieu...")
