--- a/website/templates/map.pug
+++ b/website/templates/map.pug
@@ -55,8 +55,42 @@ script.
 
 	map.addControl(new ExportControl(), "top-right");
 
+	// Display notes layers if any
+	const notesSources = !{JSON.stringify(datasources.filter(ds => ds.source === "notes"))};
+	if(notesSources.length > 0) {
+		notesSources.forEach((noteSource, nsid) => {
+			const promises = noteSource.terms.map(term => osmApi.fetchNotesSearch(term, 'json', 10000, 0));
+
+			Promise.all(promises).then(results => {
+				// Merge and dedupe notes
+				const notes = { type: "FeatureCollection", features: [] };
+				const existingNotesIds = [];
+
+				results
+				.map(res => JSON.parse(res))
+				.forEach(res => {
+					res.features.forEach(feature => {
+						if(feature.properties.status === "open" && !existingNotesIds.includes(feature.properties.id)) {
+							feature.properties.pdm_note_source = nsid;
+							notes.features.push(feature);
+							existingNotesIds.push(feature.properties.id);
+						}
+					});
+				});
+
+				// Add to map
+				map.getSource(`notes_${nsid}`).setData(notes);
+			});
+		});
+	}
+
+
+	//
 	// Click on feature
-	function getLinks(meta) {
+	//
+
+	// Links
+	function getLinksOsmose(meta) {
 		const elem = meta.elems && meta.elems.length > 0 && meta.elems[0];
 		const newElem = meta.new_elems && meta.new_elems.length > 0 && meta.new_elems[0];
 
@@ -75,6 +109,48 @@ script.
 		];
 	}
 
+	function getLinksNote(f) {
+		const [ lon, lat ] = f.geometry.coordinates;
+		return [
+			{ title: "JOSM", hrefs: [`#{CONFIG.JOSM_REMOTE_URL}/load_and_zoom?bottom=${lat-0.0005}&top=${lat+0.0005}&right=${lon+0.0005}&left=${lon-0.0005}&#{josmParams}`] },
+			{ title: "iD", href: `#{CONFIG.OSM_URL}/edit#map=20/${lat}/${lon}&#{idParams}` },
+			{ title: "OSM", href: `#{CONFIG.OSM_URL}/note/${f.properties.id}` },
+			{ title: "Mapillary", href: `#{CONFIG.MAPILLARY_URL}/app/?lat=${lat}&lng=${lon}&z=18` }
+		];
+	}
+
+	function linksToDom(links, container) {
+		container.classList.add("text-center");
+		links.forEach((l,i) => {
+			const linkDom = document.createElement("a");
+			linkDom.appendChild(document.createTextNode(l.title));
+
+			// Simple link
+			if(l.href) {
+				linkDom.href = l.href;
+				linkDom.target = "_blank";
+				linkDom.rel = "noopener";
+			}
+			// Several links (JOSM) : call one, wait 3s, call second...
+			else if(l.hrefs) {
+				linkDom.classList.add("pdm-link");
+				linkDom.addEventListener("click", () => {
+					const next = () => {
+						const url = l.hrefs.shift();
+						if(url) {
+							fetch(url).then(() => setTimeout(next, 3000));
+						}
+					};
+					next();
+				});
+			}
+
+			if(i > 0) { container.appendChild(document.createTextNode(" | ")); }
+			container.appendChild(linkDom);
+		});
+		return container;
+	}
+
 	// Mark as done/false in Osmose
 	const filteredUuids = [];
 	function markOsmose(type, feature, popup) {
@@ -90,96 +166,140 @@ script.
 		};
 	}
 
+	// Close note on OSM
+	function closeNote(p, popup) {
+		if(window.osm_user && osmApi) {
+			osmApi.closeNote(p.id, "Marqué comme résolu dans le cadre du projet du mois (via projetdumois.fr)")
+			.then(() => {
+				const source = map.getSource(`notes_${p.pdm_note_source}`);
+				const notes = source._data;
+				notes.features = notes.features.filter(f => f.properties.id !== p.id);
+				source.setData(notes);
+				popup.remove();
+			})
+			.catch(e => {
+				alert("Une erreur s'est produite lors de la modification de la note");
+				console.error(e);
+			});
+		}
+	}
+
+	// Create DOM structure for popup
 	function getDescription(feature, popup) {
 		const osmoseLabels = !{JSON.stringify(osmoseLabels)};
 		const osmoseButtons = !{JSON.stringify(osmoseButtons)};
 		const p = feature.properties;
 		const resDiv = document.createElement("div");
-		resDiv.innerHTML = `<span class="spinner-border text-primary" role="status"></span>`;
 
 		// Retrieve metadata on Osmose API
-		fetch(`#{CONFIG.OSMOSE_URL}/api/0.3beta/issue/${p.uuid}`)
-		.then(res => res.json())
-		.then(meta => {
-			const labels = osmoseLabels[`${meta.item}_${meta.class}`] || osmoseLabels[`${meta.item}_all`] || { name: meta.title.auto };
-			const buttons = osmoseButtons[`${meta.item}_${meta.class}`] || osmoseButtons[`${meta.item}_all`] || { "done": "Résolu", "false": "Faux positif" };
+		if(p.uuid) {
+			resDiv.innerHTML = `<div class="d-flex align-items-center justify-content-center" style="height: 240px; width: 240px"><span class="spinner-border text-primary" role="status" style="width: 5rem; height: 5rem;"></span></div>`;
 
-			const links = getLinks(meta).map(l => {
-				const linkDom = document.createElement("a");
-				linkDom.appendChild(document.createTextNode(l.title));
+			fetch(`#{CONFIG.OSMOSE_URL}/api/0.3beta/issue/${p.uuid}`)
+			.then(res => res.json())
+			.then(meta => {
+				const labels = osmoseLabels[`${meta.item}_${meta.class}`] || osmoseLabels[`${meta.item}_all`] || { name: meta.title.auto };
+				const buttons = osmoseButtons[`${meta.item}_${meta.class}`] || osmoseButtons[`${meta.item}_all`] || { "done": "Résolu", "false": "Faux positif" };
 
-				// Simple link
-				if(l.href) {
-					linkDom.href = l.href;
-					linkDom.target = "_blank";
-					linkDom.rel = "noopener";
-				}
-				// Several links (JOSM) : call one, wait 3s, call second...
-				else if(l.hrefs) {
-					linkDom.classList.add("pdm-link");
-					linkDom.addEventListener("click", () => {
-						const next = () => {
-							const url = l.hrefs.shift();
-							if(url) {
-								fetch(url).then(() => setTimeout(next, 3000));
-							}
-						};
-						next();
-					});
+				let tags = meta.new_elems && meta.new_elems.length > 0 ? meta.new_elems[0].add.map(kv => kv.k+"="+kv.v).join("\n") : "";
+				if(tags.length > 0) {
+					tags = `
+						<div class="form-group m-0 mb-1">
+							<label class="m-0" for="exampleFormControlTextarea1">Attributs</label>
+							<textarea class="form-control form-control-sm" rows="3">${tags}</textarea>
+						</div>`;
 				}
 
-				return linkDom;
+				let subtitle = meta.subtitle.auto;
+				if(labels.subtitles) {
+					const subtitles = Object.keys(labels.subtitles).filter(s => meta.subtitle.auto.includes(s)).map(s => labels.subtitles[s]);
+					if(subtitles.length > 0) { subtitle = subtitles[0]; }
+				}
+
+				resDiv.innerHTML = `
+					<h5 class="m-0">${labels.name}</h5>
+					<p class="m-0 mb-2">${subtitle.replace(/\n/g, "<br />")}</p>
+					${tags}`;
+
+				resDiv.appendChild(linksToDom(getLinksOsmose(meta), document.createElement("div")));
+
+				const divButtons = document.createElement("div");
+				divButtons.classList.add("btn-group", "btn-group-sm", "btn-block", "mt-1");
+				divButtons.role = "group";
+
+				const divButtonDone = document.createElement("button");
+				divButtonDone.classList.add("btn", "btn-success");
+				divButtonDone.appendChild(document.createTextNode("✔ "+buttons.done));
+				divButtonDone.title = "Marquer cet élément comme \""+buttons.done+"\" si vous avez ajouté/corrigé le point dans OpenStreetMap";
+				divButtonDone.addEventListener("click", markOsmose("done", feature, popup));
+				divButtons.appendChild(divButtonDone);
+				const divButtonFalse = document.createElement("button");
+				divButtonFalse.classList.add("btn", "btn-warning");
+				divButtonFalse.appendChild(document.createTextNode("✘ "+buttons.false));
+				divButtonFalse.title = "Marquer cet élément comme \""+buttons.false+"\" si le signalement n'est pas valide";
+				divButtonFalse.addEventListener("click", markOsmose("false", feature, popup));
+				divButtons.appendChild(divButtonFalse);
+				resDiv.appendChild(divButtons);
 			});
-
-			let tags = meta.new_elems && meta.new_elems.length > 0 ? meta.new_elems[0].add.map(kv => kv.k+"="+kv.v).join("\n") : "";
-			if(tags.length > 0) {
-				tags = `
-					<div class="form-group m-0 mb-1">
-						<label class="m-0" for="exampleFormControlTextarea1">Attributs</label>
-						<textarea class="form-control form-control-sm" rows="3">${tags}</textarea>
-					</div>`;
-			}
-
-			let subtitle = meta.subtitle.auto;
-			if(labels.subtitles) {
-				const subtitles = Object.keys(labels.subtitles).filter(s => meta.subtitle.auto.includes(s)).map(s => labels.subtitles[s]);
-				if(subtitles.length > 0) { subtitle = subtitles[0]; }
-			}
-
+		}
+		// Notes from OSM
+		else if(p.comments) {
+			const noteSource = notesSources[p.pdm_note_source];
+			const cmts = typeof p.comments === "object" ? p.comments : JSON.parse(p.comments);
 			resDiv.innerHTML = `
-				<h5 class="m-0">${labels.name}</h5>
-				<p class="m-0 mb-2">${subtitle.replace(/\n/g, "<br />")}</p>
-				${tags}`;
+				<h5 class="m-0">${noteSource.name}</h5>
+				<p class="m-0 mb-2">${noteSource.description}</p>
+				<p class="m-0 mb-2" style="font-size: 1.0rem;"><em>${cmts[0].text}</em></p>
+				${cmts.length > 1 ? `<p class="m-0 text-right"><a href="#{CONFIG.OSM_URL}/note/${p.id}" target="_blank">+ ${cmts.length-1} autre(s) commentaire(s)</a></p>`: ''}`;
 
-			const divLinks = document.createElement("div");
-			divLinks.classList.add("text-center");
-			links.forEach((l,i) => {
-				if(i > 0) { divLinks.appendChild(document.createTextNode(" | ")); }
-				divLinks.appendChild(l);
-			});
-			resDiv.appendChild(divLinks);
+			resDiv.appendChild(linksToDom(getLinksNote(feature), document.createElement("div")));
 
 			const divButtons = document.createElement("div");
 			divButtons.classList.add("btn-group", "btn-group-sm", "btn-block", "mt-1");
 			divButtons.role = "group";
+
 			const divButtonDone = document.createElement("button");
 			divButtonDone.classList.add("btn", "btn-success");
-			divButtonDone.appendChild(document.createTextNode("✔ "+buttons.done));
-			divButtonDone.title = "Marquer cet élément comme \""+buttons.done+"\" si vous avez ajouté/corrigé le point dans OpenStreetMap";
-			divButtonDone.addEventListener("click", markOsmose("done", feature, popup));
+			divButtonDone.appendChild(document.createTextNode("✔ "+noteSource.buttons.close));
+			divButtonDone.addEventListener("click", () => closeNote(p, popup));
+			const labelConnected = "Marquer cet élément comme \""+noteSource.buttons.close+"\" si vous avez ajouté/corrigé le point dans OpenStreetMap";
+			const labelDisconnected = "Vous devez être connecté pour marquer la note comme résolue.";
+			if(!window.osm_user) {
+				divButtonDone.setAttribute("disabled", "");
+				divButtonDone.title = labelDisconnected;
+			}
+			else {
+				divButtonDone.title = labelConnected;
+			}
+
+			window.addEventListener("osm_login", () => {
+				divButtonDone.removeAttribute("disabled");
+				divButtonDone.title = labelConnected;
+			});
+			window.addEventListener("osm_logout", () => {
+				divButtonDone.setAttribute("disabled", "");
+				divButtonDone.title = labelDisconnected;
+			});
 			divButtons.appendChild(divButtonDone);
-			const divButtonFalse = document.createElement("button");
-			divButtonFalse.classList.add("btn", "btn-warning");
-			divButtonFalse.appendChild(document.createTextNode("✘ "+buttons.false));
-			divButtonFalse.title = "Marquer cet élément comme \""+buttons.false+"\" si le signalement n'est pas valide";
-			divButtonFalse.addEventListener("click", markOsmose("false", feature, popup));
-			divButtons.appendChild(divButtonFalse);
+
+			const divButtonComment = document.createElement("a");
+			divButtonComment.classList.add("btn", "btn-secondary");
+			divButtonComment.role = "button";
+			divButtonComment.appendChild(document.createTextNode("💬 Commenter"));
+			divButtonComment.title = "Participer à la discussion sur cette note";
+			divButtonComment.href = `#{CONFIG.OSM_URL}/note/${p.id}`;
+			divButtonComment.target = "_blank";
+			divButtons.appendChild(divButtonComment);
 			resDiv.appendChild(divButtons);
-		});
+		}
+		else {
+			resDiv.innerHTML = "<ul>"+Object.entries(p).map(e => "<li>"+e.join(" : ")+"</li>").join("")+"</ul>";
+		}
 
 		return resDiv;
 	}
 
+	// Handle map click
 	function clickFeature(e) {
 		if(!map || !e) { return; }
 		const features = map.queryRenderedFeatures(e.point);
@@ -198,6 +318,7 @@ script.
 	}
 
 	map.on("click", clickFeature);
+
 
 //- Generate hover events for each layer dynamically on server
 -
