Show note statistics

--- a/website/templates/project.pug
+++ b/website/templates/project.pug
@@ -46,7 +46,8 @@ html(lang="fr")
 							i.fa.fa-expand
 					div.mt-3!= howto
 					div.btn-over-wide
-						a.pdm-wide-link.books(href=links.osmwiki target="_blank") Voir la documentation OpenStreetMap
+						a.pdm-wide-link.books.d-none.d-md-block(href=links.osmwiki target="_blank") Voir la documentation OpenStreetMap
+						a.pdm-wide-link.books.d-block.d-md-none(href=links.osmwiki target="_blank") Doc OpenStreetMap
 						a.btn.btn-light
 							i.fa.fa-book
 
